added jobs feature
